--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rollup-template",
+  "name": "@ec-nordbund/vuetify-module",
   "module": "dist/index.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,12 +9,27 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.15.3",
     "@rollup/plugin-commonjs": "17.1.0",
-    "@rollup/plugin-node-resolve": "11.1.1",
-    "esbuild": "0.8.39",
-    "rollup": "2.38.4",
-    "rollup-plugin-esbuild": "2.6.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "11.2.0",
+    "@types/node": "^14.14.33",
+    "esbuild": "0.9.0",
+    "nuxt": "^2.15.3",
+    "rollup": "2.41.1",
+    "rollup-plugin-dts": "^3.0.1",
+    "rollup-plugin-esbuild": "3.0.2",
     "rollup-plugin-terser": "7.0.2",
-    "typescript": "4.1.3"
+    "typescript": "4.2.3",
+    "vuetify": "^2.4.6"
+  },
+  "dependencies": {
+    "@ec-nordbund/vuetify-icon-injector": "^2.1.0",
+    "deepmerge": "^4.2.2",
+    "sass": "^1.32.8"
+  },
+  "peerDependencies": {
+    "nuxt": ">=2.15",
+    "vuetify": "2"
   }
 }
