--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "module": "dist/index.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "author": {
+    "name": "Sebastian Krüger",
+    "url": "https://github.com/mathe42"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/EC-Nordbund/vuetify-module"
+  },
+  "homepage": "https://github.com/EC-Nordbund/vuetify-module",
   "scripts": {
     "build": "tsc && rollup -c",
     "prepublishOnly": "yarn build"
